<resources>
    <string name="app_name">Tourify</string>
    <string name="hello_world_welcome">Hello World Welcome!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="search_hint">Search location</string>
    <string name="title_onBoarding_1">Find Your Dream Destination</string>
    <string name="title_onBoarding_2">Plan a Trip with Ease</string>
    <string name="desc_onBoarding_1">Welcome to Tourify! We are here to help you discover and plan the trip of your dreams. Explore amazing destinations, from beautiful beaches to historic cities, all in one app.</string>
    <string name="desc_onBoarding_2">With Tourify, planning a trip is easier and more fun. Find recommendations on the best places to visit, exciting activities you can do, and travel packages that suit your needs. Lets start your adventure with Tourify!</string>
    <string name="btn_onBoarding_start">Start</string>
    <string name="appBar_Detail">Detail Destination</string>
    <string name="email_not_valid">Email Not Valid</string>
    <string name="password_cannot_be_less_than_8_character">Password Cannot be Less Than 8 Character</string>
    <string name="string_login">Login</string>
    <string name="string_email">Email</string>
    <string name="string_password">Password</string>
    <string name="don_t_have_account_sign_up">Don’t have account? <font color="#4F4FC2">Sign up</font></string>
    <string name="i_have_account_sign_in">I have account! <font color="#4F4FC2">Sign in</font></string>
    <string name="string_forgot_password">Forgot Password?</string>
    <string name="string_username">Username</string>
    <string name="string_register">Register</string>
    <string name="title_detail">The Great Asia Africa</string>
    <string name="string_rating">4.4</string>
    <string name="string_review">(137 review)</string>
    <string name="string_price">44.000</string>
    <string name="string_kategori">Kategori</string>
    <string name="string_favorite">Favorite</string>
    <string name="title_kategori">Mount Rinjani</string>
    <string name="string_search_category">Search Category</string>
    <string name="string_edit_profile">Edit Profile</string>
    <string name="string_about_application">About Application</string>
    <string name="string_layanan_tourify">Layanan Tourify</string>

    <string name="tab_text_1">Overview</string>
    <string name="tab_text_2">Review</string>
    <string name="tab_text_3">Location</string>


    <string name="string_description_layanan_tourify">Lorem Ipsum is simply dummy text of the printing
        and typesetting industry.
        Lorem Ipsum has been the industrys standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
        It has survived not only five centuries, but also the leap into electronic typesetting,
        remaining essentially unchanged.
        It was popularised in the 1960s with the release of
        Letraset sheets containing Lorem Ipsum passages,
        and more recently with desktop publishing software
        like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="overview_text">The Great Asia Africa: A Historical and Cultural Destination on Jalan Asia Afrika, Bandung\n\n
The Great Asia Africa, located on Jalan Asia Afrika in Bandung, is a unique destination that allows visitors to explore the rich history, art, and culture of two diverse continents. This site offers a profound insight into the diplomatic journey and international relations between Asia and Africa.\n\n
**Attractions and Facilities**\n\n
Visitors can explore museums and galleries showcasing artifacts, documents, and artworks that illustrate the journey of the Asia-Africa Conference of 1955. This conference was a significant event in global history, bringing together leaders from Asian and African countries to discuss cooperation and solidarity.\n\n
The site also features beautiful gardens and open spaces, providing a serene atmosphere amidst the bustling city of Bandung. Visitors can enjoy the lush green scenery, relax, and spend quality time with family and friends.\n\n
Regularly scheduled cultural performances highlight the history and traditions of Asia and Africa. These performances include traditional dances, music, and dramas that bring the rich cultures of these continents to life.\n\n
The Great Asia Africa offers ample parking and comfortable rest areas to ensure a pleasant visit. These rest areas are equipped with shaded seating and other amenities for maximum comfort.\n\n
Various kiosks along the site sell unique souvenirs and memorabilia from Asia and Africa. Visitors can purchase distinctive items as keepsakes or gifts for loved ones.\n
</string>

    <string name="string_write_a_review">Write</string>
    <string name="category">Category</string>
    <string name="article_title">Article Title</string>
    <string name="article_description">Article Description</string>
    <string name="info_aplikasi">Info Aplikasi</string>
    <string name="example_email">example@gmail.com</string>
    <string name="my_profile">My Profile</string>
    <string name="home">Home</string>
    <string name="finance">Finance</string>
    <string name="profile">Profile</string>
    <string name="cost">Cost:</string>
    <string name="adventure_finance">Adventure Finance</string>
    <string name="sign_in_unlock">Sign In or Register to Unlock All Features</string>
    <string name="sign_in_desc_unlock">Continue your experience by logging in or registering account.</string>
    <string name="string_welcome">Welcome</string>
    <string name="string_please_login_with_your_information">Please input with your information</string>
    <string name="string_or_login_with">Or Login with</string>
    <string name="string_or_signup_with">Or SignUp with</string>
    <string name="string_join_us">Join US</string>
    <string name="string_description">Description</string>
    <string name="string_photo_gallery">Photo Gallery</string>
    <string name="string_next">Next</string>
    <string name="string_success">Success</string>
    <string name="string_yeaay">Yeayyy</string>
    <string name="string_error">Erorr</string>
    <string name="login_failed">Login Failed</string>
    <string name="String_ok">Oke</string>
    <string name="your_web_client_id">237378734832-trj6vhkldci8k19ajsn5hpk2gposn7k6.apps.googleusercontent.com</string>
    <string name="str_rp">Rp.</string>
</resources>