<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="?attr/colorPrimaryVariant"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="4dp"
    android:background="?attr/colorPrimary"
    android:paddingHorizontal="24dp"
    android:paddingVertical="8dp">

    <androidx.cardview.widget.CardView
        style="@style/Card"
        android:layout_width="350dp"
        android:layout_height="160dp"
        card_view:cardCornerRadius="20dp"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/string_kategori"
            android:scaleType="centerCrop"
            tools:src="@drawable/rinjani" />

        <androidx.cardview.widget.CardView
            style="@style/Card"
            android:layout_width="330dp"
            android:layout_height="60dp"
            android:layout_gravity="center|bottom"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            card_view:cardCornerRadius="20dp">

            <LinearLayout
                android:id="@+id/linearLayoutKategori1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/titleCategory"
                    style="@style/TextCard.RecommendationTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_kategori" />

                <ImageView
                    android:id="@+id/rating"
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="175dp"
                    android:contentDescription="@string/string_rating"
                    android:src="@drawable/rating" />

                <TextView
                    android:id="@+id/ratingText"
                    style="@style/TextCard.RecommendationTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_rating" />

            </LinearLayout>

            <TextView
                android:id="@+id/priceCategory"
                style="@style/TextCard.RecommendationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="35dp"
                android:text="@string/string_price" />

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>