<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="?attr/colorPrimaryVariant"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    tools:context=".ui.view.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialBarDetail"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:navigationIconTint="@color/white"
            app:title="@string/appBar_Detail"
            app:titleTextAppearance="@style/TextTitle.AppBar"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/detail_image_main"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginHorizontal="3dp"
        android:layout_marginVertical="3dp"
        android:contentDescription="@string/appBar_Detail"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarDetail"
        tools:src="@tools:sample/avatars" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginHorizontal="3dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/detail_image_main"
        app:layout_constraintStart_toStartOf="@id/detail_image_main"
        app:layout_constraintTop_toBottomOf="@id/detail_image_main">

        <ImageView
            android:id="@+id/detail_image_secondary"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:contentDescription="@string/appBar_Detail"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/detail_image_third"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:contentDescription="@string/appBar_Detail"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/detail_image_fourth"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginTop="3dp"
            android:contentDescription="@string/appBar_Detail"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />

    </LinearLayout>

    <TextView
        android:id="@+id/titleDetail"
        style="@style/TextTitle.Detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/title_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout1" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/titleDetail"
        app:layout_constraintStart_toStartOf="@id/titleDetail"
        app:layout_constraintTop_toBottomOf="@id/titleDetail">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/appBar_Detail"
            android:src="@drawable/rating" />

        <TextView
            android:id="@+id/rating"
            style="@style/TextTitle.Rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/string_rating" />

        <TextView
            android:id="@+id/reviewUser"
            style="@style/TextTitle.Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/string_review" />

        <TextView
            android:id="@+id/priceDetail"
            style="@style/TextTitle.Price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:text="@string/string_price" />

    </LinearLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="?attr/colorPrimaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2"
        app:tabIndicatorColor="@android:color/white"
        app:tabSelectedTextColor="@android:color/white"
        app:tabTextColor="@color/Background" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="16dp"
        android:backgroundTint="?attr/colorPrimaryVariant"
        android:contentDescription="@string/string_favorite"
        android:src="@drawable/favorite_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>