<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="?attr/colorPrimaryVariant"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".ui.view.about.AboutActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimaryVariant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/materialBarAbout"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:navigationIconTint="@color/white"
                app:titleTextAppearance="@style/TextTitle.AppBar"
                app:titleTextColor="@color/white"
                tools:title="@string/string_about_application" />

        </com.google.android.material.appbar.AppBarLayout>


        <ImageView
            android:id="@+id/imgView"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/string_about_application"
            android:padding="20dp"
            android:src="@drawable/aboutlogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appBarAbout" />

        <TextView
            android:id="@+id/layananTourify"
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:text="@string/string_layanan_tourify"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgView" />

        <TextView
            android:id="@+id/descriptionLayananTourify"
            style="@style/TextTitle.Description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/string_description_layanan_tourify"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layananTourify" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>